# Hallucination_Detection_VLM

./: .gitignore  LICENSE  PROJECT_WORKFLOW.md  README.md  VAST_AI_SETUP.md  hsa_dpo_train.sh  models.eval.example.json  pyproject.toml
asset/paper/: main.tex
fg_pipeline/: README.md  __init__.py  io_utils.py  paths.py  schemas.py
fg_pipeline/adaptive_dpo/: __init__.py  adaptive_loss.py  data_utils.py  (+1 more)
inference/: README.md  inference_example.ipynb  inference_example.py
notebooks/: results_exploration.ipynb
reports/: cleanup_log.md  experiment_log_for_instructor.csv  experiment_log_for_instructor.md  experiment_log_for_instructor.xlsx  full_pipeline_from_dhal_to_dpo_report.md  results_summary.csv  vlm_fine_grained_feedback_methodology.md
scripts/: README.md  queue_direct_normal_dpo_after_paper.sh  queue_direct_normal_dpo_after_paper_b32_e1.sh  run_2shot_verified_margin_hsa_batch32_epoch1.sh  run_calibrated_pipeline.sh  run_direct_stage5_margin_hsa_batch16.sh  run_direct_stage5_normal_dpo_batch16.sh  run_direct_stage5_normal_dpo_batch32_epoch1.sh  run_direct_stage5_paper_hsa_batch16.sh  run_direct_stage5_paper_hsa_batch32_epoch1.sh  run_full_pipeline.sh  run_paper_eval.sh  run_paper_full_pipeline.sh  run_paper_stage1_faif.sh  run_paper_stage2_detector_dataset.sh  run_paper_stage3_detect.sh  run_paper_stage3_detector_train.sh  run_paper_stage4_rewrite.sh  run_paper_stage5_train_dpo.sh  run_paper_stage5_train_hsa.sh  run_released_pref_2shot_pipeline.sh  run_released_pref_pipeline.sh  run_released_pref_stage3_validate.sh  run_released_pref_stage3_validate_2shot.sh  run_released_pref_stage3_validate_zero_shot.sh  run_released_pref_stage4_repair.sh  run_released_pref_stage4_repair_2shot.sh  run_released_pref_stage4_repair_zero_shot.sh  run_released_pref_stage5_gemini_verify.sh  run_released_pref_stage5_internvl_verify.sh  run_released_pref_stage5_openai_verify.sh  run_released_pref_stage5_openai_verify_2shot.sh  run_released_pref_zero_shot_pipeline.sh  run_stage1_detector_train.sh  run_stage2_rewrites.sh  run_stage3_calibrate.sh  run_stage3_confidence.sh  run_stage3_validate.sh  run_stage4_rewrite.sh  run_stage4_train.sh  (+8 more)
tests/: test_paper_pipeline.py  test_released_pref_pipeline.py  test_stage3.py  test_stage3_calibrate.py  test_stage3_logprob_scorer.py  test_stage3_parser.py  test_stage4_rewrite.py  test_stage5_threshold_select.py  test_stage5_verify.py  test_stage6_adaptive.py
(+362 files in other folders)
